--- a/Advertisement_Analysis.ipynb
+++ b/Advertisement_Analysis.ipynb
@@ -5,14 +5,7 @@
     "colab": {
       "name": "Advertisement Analysis",
       "provenance": [],
-      "collapsed_sections": [
-        "PDAXXOrXS_So",
-        "0QxnYEoMSKQr",
-        "QQJJVeu3JgeA",
-        "bNDeOztKMZSu",
-        "KoycOrZOVUzE",
-        "sVs_zB-XoiR_"
-      ],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1283,6 +1276,146 @@
               "\t<tr><th scope=row>50</th><td>68.2150</td><td>35</td><td>57012.30</td><td>183.1300</td></tr>\n",
               "\t<tr><th scope=row>75</th><td>78.5475</td><td>42</td><td>65470.64</td><td>218.7925</td></tr>\n",
               "\t<tr><th scope=row>max</th><td>91.4300</td><td>61</td><td>79484.80</td><td>269.9600</td></tr>\n",
+              "</tbody>\n",
+              "</table>\n"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5Fj7ZCIsE-LM",
+        "outputId": "b8e62499-1e0c-4107-cf31-7c84a520f60a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Installing fBasics\n",
+        "install.packages(\"fBasics\", dependencies=TRUE)"
+      ],
+      "execution_count": 128,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qKkhz1ypFHxz",
+        "outputId": "08ee1409-7bb5-43cf-e626-d794b8dbe371",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "library('fBasics')"
+      ],
+      "execution_count": 129,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Loading required package: timeDate\n",
+            "\n",
+            "Loading required package: timeSeries\n",
+            "\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FvaukWK9FIBF",
+        "outputId": "12507803-3957-4562-e037-95e22257116b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 99
+        }
+      },
+      "source": [
+        "#checking the skweness\n",
+        "numeric_cols[,lapply(.SD, skewness)]"
+      ],
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "  Daily_time Age       Area_income Daily_internet\n",
+              "1 -0.370646  0.4777052 -0.6484229  -0.03343681   "
+            ],
+            "text/latex": "A data.table: 1 × 4\n\\begin{tabular}{llll}\n Daily\\_time & Age & Area\\_income & Daily\\_internet\\\\\n <dbl> & <dbl> & <dbl> & <dbl>\\\\\n\\hline\n\t -0.370646 & 0.4777052 & -0.6484229 & -0.03343681\\\\\n\\end{tabular}\n",
+            "text/markdown": "\nA data.table: 1 × 4\n\n| Daily_time &lt;dbl&gt; | Age &lt;dbl&gt; | Area_income &lt;dbl&gt; | Daily_internet &lt;dbl&gt; |\n|---|---|---|---|\n| -0.370646 | 0.4777052 | -0.6484229 | -0.03343681 |\n\n",
+            "text/html": [
+              "<table>\n",
+              "<caption>A data.table: 1 × 4</caption>\n",
+              "<thead>\n",
+              "\t<tr><th scope=col>Daily_time</th><th scope=col>Age</th><th scope=col>Area_income</th><th scope=col>Daily_internet</th></tr>\n",
+              "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "\t<tr><td>-0.370646</td><td>0.4777052</td><td>-0.6484229</td><td>-0.03343681</td></tr>\n",
+              "</tbody>\n",
+              "</table>\n"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eviIRoHkFhro",
+        "outputId": "4fc344d6-9519-4100-84d4-330bbc3459ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 99
+        }
+      },
+      "source": [
+        "#checking the kurtosis\n",
+        "numeric_cols[,lapply(.SD, kurtosis)]"
+      ],
+      "execution_count": 131,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "  Daily_time Age        Area_income Daily_internet\n",
+              "1 -1.099864  -0.4097066 -0.1110924  -1.275752     "
+            ],
+            "text/latex": "A data.table: 1 × 4\n\\begin{tabular}{llll}\n Daily\\_time & Age & Area\\_income & Daily\\_internet\\\\\n <dbl> & <dbl> & <dbl> & <dbl>\\\\\n\\hline\n\t -1.099864 & -0.4097066 & -0.1110924 & -1.275752\\\\\n\\end{tabular}\n",
+            "text/markdown": "\nA data.table: 1 × 4\n\n| Daily_time &lt;dbl&gt; | Age &lt;dbl&gt; | Area_income &lt;dbl&gt; | Daily_internet &lt;dbl&gt; |\n|---|---|---|---|\n| -1.099864 | -0.4097066 | -0.1110924 | -1.275752 |\n\n",
+            "text/html": [
+              "<table>\n",
+              "<caption>A data.table: 1 × 4</caption>\n",
+              "<thead>\n",
+              "\t<tr><th scope=col>Daily_time</th><th scope=col>Age</th><th scope=col>Area_income</th><th scope=col>Daily_internet</th></tr>\n",
+              "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "\t<tr><td>-1.099864</td><td>-0.4097066</td><td>-0.1110924</td><td>-1.275752</td></tr>\n",
               "</tbody>\n",
               "</table>\n"
             ]
