--- a/Advertisement_Analysis.ipynb
+++ b/Advertisement_Analysis.ipynb
@@ -6,6 +6,7 @@
       "name": "Advertisement Analysis",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -130,7 +131,7 @@
         "#Installing the data table package\n",
         "install.packages(\"data.table\", dependencies=TRUE)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,7 +161,7 @@
         "install.packages(\"ggplot2\", dependencies=TRUE)\n",
         "install.packages(\"corrplot\", dependencies=TRUE)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +197,7 @@
         "library(corrplot)\n",
         "library(ggplot2)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -212,7 +213,7 @@
         "library(tidyverse)\n",
         "library(lubridate)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,7 +279,7 @@
         "advertising <- read_csv('advertising.csv')\n",
         "head(advertising) # preview first 6 rows"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -371,7 +372,7 @@
         "  cat('\\n')\n",
         "}"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -433,7 +434,7 @@
         "library(tibble)\n",
         "glimpse(advertising)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -478,7 +479,7 @@
         "colnames(advertising) <- list('Daily_time', 'Age', 'Area_income', 'Daily_internet', 'Ad_topic', 'City', 'Gender', 'Country', 'Timestamp', 'Clicked')\n",
         "colnames"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -540,7 +541,7 @@
         "advertising$Gender = as.character(advertising$Gender)\n",
         "advertising$Gender <- recode(advertising$Gender , \"1\" = \"Male\", \"0\" = \"Female\" )"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -558,7 +559,7 @@
         "advertising$Timestamp <- as.Date(advertising$Timestamp)\n",
         "head(advertising)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -626,7 +627,7 @@
         "#checking for null values\n",
         "colSums(is.na(advertising))"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -678,7 +679,7 @@
         "duplicates <- advertising[duplicated(advertising),]\n",
         "duplicates"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -728,7 +729,7 @@
         "income <- advertising$Area_income\n",
         "internet <- advertising$Daily_internet"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -745,7 +746,7 @@
         "#Checking for outliers in our numerical columns\n",
         "boxplot(time, main='Daily Time Use boxplot')"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -778,7 +779,7 @@
       "source": [
         "boxplot(age, main='Age Variable boxplot')"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -811,7 +812,7 @@
       "source": [
         "boxplot(income, main='Income Variable boxplot')"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -844,7 +845,7 @@
       "source": [
         "boxplot(internet, main='Daily Internet Use boxplot')"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -892,7 +893,7 @@
         "#Importing the necessary library \n",
         "library(tidyr)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -904,7 +905,7 @@
         "#SplittingTime stamp column into Year, Month and day.\n",
         "advertising = separate(advertising, \"Timestamp\", c(\"Year\", \"Month\", \"Day\"), sep = \"-\")"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -921,7 +922,7 @@
         "#Previewing the first few rows in our data table.\n",
         "head(advertising)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -981,7 +982,7 @@
         "id": "0QxnYEoMSKQr"
       },
       "source": [
-        "# 5. Data Exploration"
+        "# 8. Data Exploration"
       ]
     },
     {
@@ -1003,7 +1004,7 @@
         "library(data.table)\n",
         "numeric_cols <- data.table(numeric_cols)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1020,7 +1021,7 @@
         "#checking for the mean\n",
         "numeric_cols[,lapply(.SD, mean)]"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1064,7 +1065,7 @@
         "#checking for the median\n",
         "numeric_cols[,lapply(.SD, median)]"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1113,7 +1114,7 @@
         "\n",
         "numeric_cols[,lapply(.SD, getmode)]"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1157,7 +1158,7 @@
         "#checking the standard deviation\n",
         "numeric_cols[,lapply(.SD, sd)]"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1201,7 +1202,7 @@
         "# checking the variance \n",
         "numeric_cols[,lapply(.SD, var)]"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1248,7 +1249,7 @@
         "rownames(quantiles) <- quantile_range\n",
         "quantiles"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1299,7 +1300,7 @@
         "#Installing fBasics\n",
         "install.packages(\"fBasics\", dependencies=TRUE)"
       ],
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1324,7 +1325,7 @@
       "source": [
         "library('fBasics')"
       ],
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1352,7 +1353,7 @@
         "#checking the skweness\n",
         "numeric_cols[,lapply(.SD, skewness)]"
       ],
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1396,7 +1397,7 @@
         "#checking the kurtosis\n",
         "numeric_cols[,lapply(.SD, kurtosis)]"
       ],
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1442,7 +1443,7 @@
         "\n",
         "data.frame(head(country_frequency))"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1497,7 +1498,7 @@
         "ggplot(advertising, aes(Clicked)) + \n",
         "  geom_bar(fill = \"brown\")"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1538,9 +1539,9 @@
       },
       "source": [
         "# check gender count distribution\n",
-        "barplot(table(advertising$Gender), main='FGender distribution', xlab='Genders')"
+        "barplot(table(advertising$Gender), main='Gender distribution', xlab='Genders')"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1587,7 +1588,7 @@
         "hist((advertising$Daily_internet), col='blue', main='Daily Internet Usage')\n",
         "hist((advertising$Daily_time), col='red', main='Daily Time Usage')"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1642,7 +1643,7 @@
         "a + geom_col(aes(fill = `Month`)) +\n",
         "  scale_fill_manual(values = c(\"#00AFBB\", \"#E7B800\", \"#FC4E07\",\"#0073C2FF\", \"#EFC000FF\",\"#0073C2FF\",\"#E7B800\"))"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1694,7 +1695,7 @@
         "  arrange(desc(n))%>%\n",
         "  head(10)"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1723,7 +1724,7 @@
         "z + geom_col(aes(fill = `Day`)) +\n",
         "  scale_fill_manual(values = c(\"violet\", \"red\",\"green\",\"darkblue\",\"tomato\",\"aquamarine\",\"cyan\",\"chocolate4\",\"orange\",\"sienna1\"))"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1777,7 +1778,7 @@
         "b + geom_col(aes(fill = `Gender`)) +\n",
         "  scale_fill_manual(values = c('red', 'blue'))"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1821,7 +1822,7 @@
         "  group_by(Gender) %>%\n",
         "  summarise(n=sum(Daily_time, na.rm=TRUE))"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1850,7 +1851,7 @@
         "e + geom_col(aes(fill = `Gender`)) +\n",
         "  scale_fill_manual(values = c(\"#00AFBB\", \"#E7B800\"))"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1896,7 +1897,7 @@
         "  arrange(desc(n))%>%\n",
         "  head(10)"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1924,7 +1925,7 @@
         "\n",
         "f + geom_col(aes(fill = `Country`)) "
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1979,7 +1980,7 @@
         "  arrange(desc(n))%>%\n",
         "  head(10)"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2007,7 +2008,7 @@
         "\n",
         "g + geom_col(aes(fill = `City`)) "
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2061,7 +2062,7 @@
         "  arrange(desc(n))%>%\n",
         "  head(10)"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2089,7 +2090,7 @@
         "\n",
         "i + geom_col(aes(fill = `Country`)) "
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2135,7 +2136,7 @@
         "daily_time <- advertising$Daily_time\n",
         "age <- advertising$Age"
       ],
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2151,7 +2152,7 @@
       "source": [
         "plot(age, daily_time, xlab='Age', ylab='Daily Time Spent', main='Age vs Daily Time')"
       ],
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2184,7 +2185,7 @@
       "source": [
         "plot(age, area_income, xlab='Age', ylab='Area Income', main='Age vs Area Income')"
       ],
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2217,7 +2218,7 @@
       "source": [
         "plot(age, daily_internet, xlab='Age', ylab='Daily Internet', main='Age vs Daily Internet')"
       ],
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2250,7 +2251,7 @@
       "source": [
         "plot(daily_time, daily_internet, xlab='Daily Time Spent', ylab='Daily Internet', main='Daily Time vs Daily Internet')"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2283,7 +2284,7 @@
       "source": [
         "plot(daily_time, daily_internet, xlab='Daily Time Spent', ylab='Daily Internet', main='Daily Time vs Daily Internet')"
       ],
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2316,7 +2317,7 @@
       "source": [
         "plot(area_income, daily_internet, xlab='Area Income', ylab='Daily Internet', main='Daily Internet vs Area Income')"
       ],
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2354,7 +2355,7 @@
         "  labs(title = \"Click Rate Comparison by Age\") +\n",
         "  theme(panel.background = element_rect(fill = \"white\"))"
       ],
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2392,7 +2393,7 @@
         "  labs(title = \"Click Rate Comparison by Area Income\") +\n",
         "  theme(panel.background = element_rect(fill = \"white\"))"
       ],
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2430,7 +2431,7 @@
         "  labs(title = \"Click Rate Comparison by Daily Internet Use\") +\n",
         "  theme(panel.background = element_rect(fill = \"white\"))"
       ],
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2468,7 +2469,7 @@
         "  labs(title = \"Click Rate Comparison by Daily Time Spent\") +\n",
         "  theme(panel.background = element_rect(fill = \"white\"))"
       ],
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2497,7 +2498,7 @@
         "#Subsetting numerical columns in the datatable\n",
         "numerical_cols <- (colnames(advertising) == 'Daily_time' | colnames(advertising) == 'Age' | colnames(advertising) == 'Area_income' | colnames(advertising) == 'Daily_internet' | colnames(advertising) == 'Clicked')\n"
       ],
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2514,7 +2515,7 @@
         "#Finding correlations in our numerical columns.\n",
         "cor(numeric_cols)"
       ],
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2568,7 +2569,7 @@
         "\n",
         "corrplot(mydata.cor) # plot correlation matrix"
       ],
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2615,7 +2616,7 @@
       "source": [
         "head(advertising)"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2682,7 +2683,7 @@
         "#Installing fBasics\n",
         "install.packages(\"fBasics\", dependencies=TRUE)"
       ],
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2704,7 +2705,7 @@
         "id": "KoycOrZOVUzE"
       },
       "source": [
-        "# Challenging the Solution\n",
+        "# 9. Challenging the Solution\n",
         "\n",
         "- This analysis included preliminary data exploration to deterimine how the various variables behave, are distributed and contribute to whther or not an individual will click on the ads. \n",
         "\n",
@@ -2724,7 +2725,7 @@
         "id": "bNDeOztKMZSu"
       },
       "source": [
-        "# Conclusion"
+        "# 10. Conclusion"
       ]
     },
     {
